--- a/index.html
+++ b/index.html
@@ -1,14 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    <title>Weather App</title>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Weather Application</title>
-    <link rel="stylesheet" href="src/style.css" />
-  </head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" integrity="sha512-u9akINsQsAkG9xjc1cnGF4zw5TFDwkxuc9vUp5dltDWYCSmyd0meygbvgXrlc/z7/o4a19Fb5V0OUE58J7dcyw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://kit.fontawesome.com/b8695aa047.js"
+      crossorigin="anonymous">
+    </script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+</head>
+<link rel="stylesheet" href="src/style.css" />
   <body>
-    <h1>Simple Weather Application</h1>
-    <script src="src/script.js"></script>
+    <div class="container-fluid">
+      <div class="card main-card">
+        <span class="card-body">
+          <form id="search-form">
+            <div class="search-box">
+               <input 
+               type="text" 
+               id="search-city-input" 
+               aria-label="city"
+               placeholder="  🔍 Type city name"/>
+              <button 
+              class="submit-button" 
+              id="search-submit-button" 
+              type="button">
+                  Submit
+                </button>
+            </div>
+          </form>
+          <div class="row">
+              <div class="col-4 weekday-cards big-sun">
+                <i class="fa-solid fa-sun big-sun" style="color: #f9fd2b;"></i>
+              </div>
+            <div class="col-4 city-name">
+              <h1 id="city-name">Branford<span>, </span><span id="country">US</span></h1>
+              <span class="current-date" id="dateTime">Sunday 21 May</span>
+              <p id="weather-description">Sunny <br />
+              </p>
+              
+            </div>
+            <div class="col-4 right-side-text">
+                  <span class="h1-right-side-text" id="current-temp">55 </span>
+                  <span class="right-side-text-f">°F </span> 
+                  <p>Wind: <span id="wind">5</span>mph<br/>
+                    Humidity: <span id="humidity">27</span>%
+                  </p>
+            </div>
+          </div>
+        <div class="row weekday-card-row">
+          <span class="col-2 weekday-cards">
+            <span class="card weekday-cards">
+              <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+              <span class="weekday-card-body">
+                  <p class="weekday-text">Monday
+                    <span class="weekday-f-degrees">60°F</span>
+                  </p>
+                </span>
+            </span>
+          </span>
+          <span class="col-2 weekday-cards">
+            <span class="card weekday-cards">
+              <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+                <span class="weekday-card-body">
+                  <p class="weekday-text">Tuesday 
+                      <span class="weekday-f-degrees">60°F</span>
+                  </p>
+                </span>
+            </span>
+          </span>
+            <span class="col-2 weekday-cards">
+              <span class="card weekday-cards">
+                <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+                  <span class="weekday-card-body">
+                    <p class="weekday-text">Wednesday
+                      <span class="weekday-f-degrees">60°F</span>
+                    </p>
+                  </span>
+              </span>
+            </span>
+            <span class="col-2 weekday-cards">
+              <span class="card weekday-cards">
+                <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+                  <span class="weekday-card-body">
+                    <p class="weekday-text">Thursday
+                      <span class="weekday-f-degrees">60°F</span>
+                    </p>
+                  </span>
+              </span>
+            </span>
+            <span class="col-2 weekday-cards">
+              <span class="card weekday-cards">
+                <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>              
+                  <span class="weekday-card-body">
+                    <p class="weekday-text">Friday
+                      <br />
+                      <span class="weekday-f-degrees">60°F</span>
+                    </p>
+                  </span>
+              </span>
+            </span>
+            <span class="col-2 weekday-cards">
+              <span class="card weekday-cards">
+                <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+                    <span class="weekday-card-body">
+                      <p class="weekday-text">Saturday
+                        <span class="weekday-f-degrees">60°F</span>
+                      </p>
+                    </span>
+              </span>
+            </span>
+        </div>
+   <script 
+   src="src/script.js">
+  </script> 
   </body>
 </html>
