Added attribution and source code link to GitHub
Customized CSS - class names: attribution & open-source-code

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
               </span>
             </span>
         </div>
+        <div class="attribution">
+                <a 
+                class="open-source-code"
+                href="https://github.com/Mandyguti20/Simple-Weather-Application-"
+                target="_blank"<u>Open Source Code</u></a> - Coded by Mandy Gutierrez
+        </div> 
    <script 
    src="src/script.js">
   </script> 
