Changed weekday elements from span to div
Also, changed 175 margin to auto and 144 from flex to block

--- a/index.html
+++ b/index.html
@@ -58,67 +58,67 @@
             </div>
           </div>
         <div class="row weekday-card-row">
-          <span class="col-2 weekday-cards">
-            <span class="card weekday-cards">
+          <div class="col-2 weekday-cards">
+            <div class="card weekday-cards">
               <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
-              <span class="weekday-card-body">
+              <div class="weekday-card-body">
                   <p class="weekday-text">Monday
-                    <span class="weekday-f-degrees">60°F</span>
+                    <div class="weekday-f-degrees">60°F</div>
                   </p>
-                </span>
-            </span>
-          </span>
-          <span class="col-2 weekday-cards">
-            <span class="card weekday-cards">
+                </div>
+            </div>
+          </div>
+          <div class="col-2 weekday-cards">
+            <div class="card weekday-cards">
               <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
-                <span class="weekday-card-body">
+                <div class="weekday-card-body">
                   <p class="weekday-text">Tuesday 
-                      <span class="weekday-f-degrees">60°F</span>
+                      <div class="weekday-f-degrees">60°F</div>
                   </p>
-                </span>
-            </span>
-          </span>
-            <span class="col-2 weekday-cards">
-              <span class="card weekday-cards">
+                </div>
+            </div>
+          </div>
+            <div class="col-2 weekday-cards">
+              <div class="card weekday-cards">
                 <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
-                  <span class="weekday-card-body">
+                  <div class="weekday-card-body">
                     <p class="weekday-text">Wednesday
-                      <span class="weekday-f-degrees">60°F</span>
+                      <div class="weekday-f-degrees">60°F</div>
                     </p>
-                  </span>
-              </span>
-            </span>
-            <span class="col-2 weekday-cards">
-              <span class="card weekday-cards">
+                  </div>
+              </div>
+            </div>
+            <div class="col-2 weekday-cards">
+              <div class="card weekday-cards">
                 <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
-                  <span class="weekday-card-body">
+                  <div class="weekday-card-body">
                     <p class="weekday-text">Thursday
-                      <span class="weekday-f-degrees">60°F</span>
+                      <div class="weekday-f-degrees">60°F</div>
                     </p>
-                  </span>
-              </span>
-            </span>
-            <span class="col-2 weekday-cards">
-              <span class="card weekday-cards">
+                  </div>
+              </div>
+            </div>
+            <div class="col-2 weekday-cards">
+              <div class="card weekday-cards">
                 <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>              
-                  <span class="weekday-card-body">
+                  <div class="weekday-card-body">
                     <p class="weekday-text">Friday
                       <br />
-                      <span class="weekday-f-degrees">60°F</span>
+                      <div class="weekday-f-degrees">60°F</div>
                     </p>
-                  </span>
-              </span>
-            </span>
-            <span class="col-2 weekday-cards">
-              <span class="card weekday-cards">
+                  </div>
+              </div>
+            </div>
+            <div class="col-2 weekday-cards">
+              <div class="card weekday-cards">
                 <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
-                    <span class="weekday-card-body">
+                    <div class="weekday-card-body">
                       <p class="weekday-text">Saturday
-                        <span class="weekday-f-degrees">60°F</span>
+                        <div class="weekday-f-degrees">60°F</div>
                       </p>
-                    </span>
-              </span>
-            </span>
+                    </div>
+              </div>
+            </div>
         </div>
         <div class="attribution">
                 <a 
