--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container-fluid">
       <div class="card main-card">
-        <span class="card-body">
+        <div class="card-body">
           <form id="search-form">
             <div class="search-box">
                <input 
@@ -38,7 +38,7 @@
                 </button>
             </div>
           </form>
-          <div class="row">
+          <div class="row weather-display-row">
               <div class="col-4 weekday-cards big-sun">
                 <i class="fa-solid fa-sun big-sun" style="color: #f9fd2b;"></i>
               </div>
