Improved CSS code and removed additional class name for line 42 HTML

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           </form>
           <div class="row weather-display-row">
-              <div class="col-4 weekday-cards big-sun">
+              <div class="col-4 big-sun">
                 <i class="fa-solid fa-sun big-sun" style="color: #f9fd2b;"></i>
               </div>
             <div class="col-4 city-name">
@@ -119,6 +119,7 @@
                     </div>
               </div>
             </div>
+        </div>
         </div>
         <div class="attribution">
                 <a 
