Added weather icons and updated class names

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </div>
           </form>
           <div class="row weather-display-row">
-              <div class="col-4 big-sun">
-                <i class="fa-solid fa-sun big-sun" style="color: #f9fd2b;"></i>
+              <div class="col-4 big-icon">
+                <i class="fa-solid fa-cloud-sun"></i>
               </div>
             <div class="col-4 city-name">
               <h1 id="city-name">Branford<span>, </span><span id="country">US</span></h1>
@@ -60,7 +60,7 @@
         <div class="row weekday-card-row">
           <div class="col-2 weekday-cards">
             <div class="card weekday-cards">
-              <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+              <i class="fa-solid fa-cloud-rain" style="color:white;"></i>
               <div class="weekday-card-body">
                   <p class="weekday-text">Monday
                     <div class="weekday-f-degrees">60°F</div>
@@ -70,7 +70,7 @@
           </div>
           <div class="col-2 weekday-cards">
             <div class="card weekday-cards">
-              <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+              <i class="fa-solid fa-umbrella"></i>
                 <div class="weekday-card-body">
                   <p class="weekday-text">Tuesday 
                       <div class="weekday-f-degrees">60°F</div>
@@ -80,8 +80,8 @@
           </div>
             <div class="col-2 weekday-cards">
               <div class="card weekday-cards">
-                <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
-                  <div class="weekday-card-body">
+                <i class="fa-solid fa-cloud-bolt"></i>
+                 <div class="weekday-card-body">
                     <p class="weekday-text">Wednesday
                       <div class="weekday-f-degrees">60°F</div>
                     </p>
@@ -90,7 +90,7 @@
             </div>
             <div class="col-2 weekday-cards">
               <div class="card weekday-cards">
-                <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+                <i class="fa-solid fa-umbrella"></i>
                   <div class="weekday-card-body">
                     <p class="weekday-text">Thursday
                       <div class="weekday-f-degrees">60°F</div>
@@ -100,7 +100,7 @@
             </div>
             <div class="col-2 weekday-cards">
               <div class="card weekday-cards">
-                <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>              
+                <i class="fa-solid fa-cloud-sun"></i>           
                   <div class="weekday-card-body">
                     <p class="weekday-text">Friday
                       <br />
@@ -111,7 +111,7 @@
             </div>
             <div class="col-2 weekday-cards">
               <div class="card weekday-cards">
-                <i class="fa-solid fa-sun weekday-sun" style="color: #f9fd2b;"></i>
+                <i class="fa-solid fa-wind"></i>
                     <div class="weekday-card-body">
                       <p class="weekday-text">Saturday
                         <div class="weekday-f-degrees">60°F</div>
