Improved CSS and updated classes to be more relevant

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
               </p>
               
             </div>
-            <div class="col-4 right-side-text">
-                  <span class="h1-right-side-text" id="current-temp">55 </span>
-                  <span class="right-side-text-f">°F </span> 
+            <div class="col-4 weather-temp">
+                  <span id="current-temp">55 </span>
+                  <span class="fahrenheit-sign" id="fahrenheit-sign">°F </span> 
                   <p>Wind: <span id="wind">5</span>mph<br/>
                     Humidity: <span id="humidity">27</span>%
                   </p>
