Changed unit class in html and updated css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="col-4 weather-temp">
                   <span id="current-temp">55 </span>
-                  <span class="fahrenheit-sign" id="fahrenheit-sign">°F </span> 
+                  <span class="units" id="units">°F | <a href="#">°C</a></span> 
                   <p>Wind: <span id="wind">5</span>mph<br/>
                     Humidity: <span id="humidity">27</span>%
                   </p>
