Removed fake city data in html

--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                 <i class="fa-solid fa-cloud-sun"></i>
               </div>
             <div class="col-4 city-name">
-              <h1 id="city-name">Branford<span>, </span><span id="country">US</span></h1>
-              <span class="current-date" id="dateTime">Sunday 21 May</span>
-              <p id="weather-description">Sunny <br />
+              <h1 id="city-name"><span>, </span><span id="country"></span></h1>
+              <span class="current-date" id="dateTime"></span>
+              <p id="weather-description"> <br />
               </p>
               
             </div>
             <div class="col-4 weather-temp">
-                  <span id="current-temp">55 </span>
+                  <span id="current-temp"> </span>
                   <span class="units" id="units">°F | <a href="#">°C</a></span> 
-                  <p>Wind: <span id="wind">5</span>mph<br/>
-                    Humidity: <span id="humidity">27</span>%
+                  <p>Wind: <span id="wind"></span>mph<br/>
+                    Humidity: <span id="humidity"></span>%
                   </p>
             </div>
           </div>
