Added weather-description class to html, css: text-transform: cap, updated JS to weather description

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="col-4 city-name">
               <h1 id="city-name"><span>, </span><span id="country"></span></h1>
               <span class="current-date" id="dateTime"></span>
-              <p id="weather-description"> <br />
+              <p class="weather-description" id="weather-description"> <br />
               </p>
               
             </div>
