added updating icon and alt element

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
           </form>
           <div class="row weather-display-row">
               <div class="col-4 big-icon">
-                <i class="fa-solid fa-cloud-sun"></i>
+                <img 
+                src="" alt=""
+                id="icon">
               </div>
             <div class="col-4 city-name">
               <h1 id="city-name"><span>, </span><span id="country"></span></h1>
