Changed API to SheCodes API

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="row weather-display-row">
               <div class="col-4 big-icon">
                 <img 
-                src="" alt=""
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" alt=""
                 id="icon">
               </div>
             <div class="col-4 city-name">
