improved css button and enlarged search field

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
           <form id="search-form">
             <div class="search-box">
                <input 
-               type="text" 
+               type="search" 
                id="search-city-input" 
                aria-label="city"
+               autocomplete="off"
                placeholder="  🔍 Type city name"/>
-              <button 
-              class="submit-button" 
+              <button
+              class="btn btn-primary submit-button" 
               id="search-submit-button" 
               type="button">
                   Submit
