Implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 id="icon">
               </div>
             <div class="col-4 city-name">
-              <h1 id="city-name"><span>, </span><span id="country"></span></h1>
+              <h1 id="city-name"><span> </span><span id="country"></span></h1>
               <span class="current-date" id="dateTime"></span>
               <p class="weather-description" id="weather-description"> <br />
               </p>
@@ -54,7 +54,7 @@
             </div>
             <div class="col-4 weather-temp">
                   <span id="current-temp"> </span>
-                  <span class="units" id="units">°F | <a href="#">°C</a></span> 
+                  <span class="units" id="units"><a href="#" id="imperial-unit" class="active">°F</a> | <a href="#" id="metric-unit">°C</a></span> 
                   <p>Wind: <span id="wind"></span>mph<br/>
                     Humidity: <span id="humidity"></span>%
                   </p>
