added and improved forecast row

--- a/index.html
+++ b/index.html
@@ -60,73 +60,89 @@
                   </p>
             </div>
           </div>
-<!--
-        <div class="row weekday-card-row">
+        <div class="row weather-forecast-row">
           <div class="col-2 weekday-cards">
             <div class="card weekday-cards">
-              <i class="fa-solid fa-cloud-rain" style="color:white;"></i>
-              <div class="weekday-card-body">
-                  <p class="weekday-text">Monday
-                    <div class="weekday-f-degrees">60°F</div>
-                  </p>
-                </div>
-            </div>
-          </div>
-          <div class="col-2 weekday-cards">
-            <div class="card weekday-cards">
-              <i class="fa-solid fa-umbrella"></i>
                 <div class="weekday-card-body">
-                  <p class="weekday-text">Tuesday 
-                      <div class="weekday-f-degrees">60°F</div>
-                  </p>
+                  <p class="weekday-text">Mon</p>
+                    <img 
+                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
+                        alt="" 
+                        width="40"
+                        class="weekday-icon">
+                   <div class="weekday-f-degrees">77 25</div>
+
+                </div>
+            </div>
+          </div>
+          <div class="col-2 weekday-cards">
+            <div class="card weekday-cards">
+                <div class="weekday-card-body">
+                  <p class="weekday-text">Tues</p>
+                  <img 
+                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
+                        alt="" 
+                        width="40"
+                        class="weekday-icon">
+                   <div class="weekday-f-degrees">77 25</div>
                 </div>
             </div>
           </div>
             <div class="col-2 weekday-cards">
               <div class="card weekday-cards">
-                <i class="fa-solid fa-cloud-bolt"></i>
                  <div class="weekday-card-body">
-                    <p class="weekday-text">Wednesday
-                      <div class="weekday-f-degrees">60°F</div>
-                    </p>
+                    <p class="weekday-text">Wed</p>
+                    <img 
+                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
+                        alt="" 
+                        width="40"
+                        class="weekday-icon">
+                   <div class="weekday-f-degrees">77 25</div>
                   </div>
               </div>
             </div>
             <div class="col-2 weekday-cards">
               <div class="card weekday-cards">
-                <i class="fa-solid fa-umbrella"></i>
                   <div class="weekday-card-body">
-                    <p class="weekday-text">Thursday
-                      <div class="weekday-f-degrees">60°F</div>
-                    </p>
+                    <p class="weekday-text">Thur</p>
+                    <img 
+                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
+                        alt="" 
+                        width="40"
+                        class="weekday-icon">
+                   <div class="weekday-f-degrees">77 25</div>
                   </div>
               </div>
             </div>
             <div class="col-2 weekday-cards">
               <div class="card weekday-cards">
-                <i class="fa-solid fa-cloud-sun"></i>           
                   <div class="weekday-card-body">
-                    <p class="weekday-text">Friday
-                      <br />
-                      <div class="weekday-f-degrees">60°F</div>
-                    </p>
-                  </div>
+                    <p class="weekday-text">Fri</p>
+                <img 
+                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
+                        alt="" 
+                        width="40"
+                        class="weekday-icon">
+                   <div class="weekday-f-degrees">77 25</div>  
+                </div>
               </div>
             </div>
             <div class="col-2 weekday-cards">
               <div class="card weekday-cards">
-                <i class="fa-solid fa-wind"></i>
                     <div class="weekday-card-body">
-                      <p class="weekday-text">Saturday
-                        <div class="weekday-f-degrees">60°F</div>
-                      </p>
+                      <p class="weekday-text">Sat</p>
+                      <img 
+                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
+                        alt="" 
+                        width="40"
+                        class="weekday-icon">
+                   <div class="weekday-f-degrees">77 25</div>
                     </div>
               </div>
             </div>
         
         </div>
         </div>
-        -->
         <div class="attribution">
                 <a 
                 class="open-source-code"
