added span and classes to forecast

--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
                         alt="" 
                         width="40"
                         class="weekday-icon">
-                   <div class="weekday-f-degrees">77 25</div>
-
+                   <div class="weekday-degrees">
+                        <span class="forecast-max">77</span> 
+                        <span class="forecast-min">25</span>
+                    </div>
                 </div>
             </div>
           </div>
@@ -84,7 +86,10 @@
                         alt="" 
                         width="40"
                         class="weekday-icon">
-                   <div class="weekday-f-degrees">77 25</div>
+                   <div class="weekday-degrees">
+                        <span class="forecast-max">77</span> 
+                        <span class="forecast-min">25</span>
+                    </div>
                 </div>
             </div>
           </div>
@@ -97,7 +102,10 @@
                         alt="" 
                         width="40"
                         class="weekday-icon">
-                   <div class="weekday-f-degrees">77 25</div>
+                   <div class="weekday-degrees">
+                        <span class="forecast-max">77</span> 
+                        <span class="forecast-min">25</span>
+                    </div>
                   </div>
               </div>
             </div>
@@ -110,7 +118,10 @@
                         alt="" 
                         width="40"
                         class="weekday-icon">
-                   <div class="weekday-f-degrees">77 25</div>
+                   <div class="weekday-degrees">
+                        <span class="forecast-max">77</span> 
+                        <span class="forecast-min">25</span>
+                    </div>
                   </div>
               </div>
             </div>
@@ -118,12 +129,15 @@
               <div class="card weekday-cards">
                   <div class="weekday-card-body">
                     <p class="weekday-text">Fri</p>
-                <img 
+                    <img 
                         src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
                         alt="" 
                         width="40"
                         class="weekday-icon">
-                   <div class="weekday-f-degrees">77 25</div>  
+                   <div class="weekday-degrees">
+                        <span class="forecast-max">77</span> 
+                        <span class="forecast-min">25</span>
+                    </div>  
                 </div>
               </div>
             </div>
@@ -136,8 +150,11 @@
                         alt="" 
                         width="40"
                         class="weekday-icon">
-                   <div class="weekday-f-degrees">77 25</div>
+                   <div class="weekday-degrees">
+                        <span class="forecast-max">77</span> 
+                        <span class="forecast-min">25</span>
                     </div>
+                </div>
               </div>
             </div>
         
