Moved forecast row HTML to JS

--- a/index.html
+++ b/index.html
@@ -60,112 +60,16 @@
                   </p>
             </div>
           </div>
-        <div class="row weather-forecast-row">
-          <div class="col-2 weekday-cards">
-            <div class="card weekday-cards">
-                <div class="weekday-card-body">
-                  <p class="weekday-text">Mon</p>
-                    <img 
-                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
-                        alt="" 
-                        width="40"
-                        class="weekday-icon">
-                   <div class="weekday-degrees">
-                        <span class="forecast-max">77</span> 
-                        <span class="forecast-min">25</span>
-                    </div>
-                </div>
-            </div>
-          </div>
-          <div class="col-2 weekday-cards">
-            <div class="card weekday-cards">
-                <div class="weekday-card-body">
-                  <p class="weekday-text">Tues</p>
-                  <img 
-                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
-                        alt="" 
-                        width="40"
-                        class="weekday-icon">
-                   <div class="weekday-degrees">
-                        <span class="forecast-max">77</span> 
-                        <span class="forecast-min">25</span>
-                    </div>
-                </div>
-            </div>
-          </div>
-            <div class="col-2 weekday-cards">
-              <div class="card weekday-cards">
-                 <div class="weekday-card-body">
-                    <p class="weekday-text">Wed</p>
-                    <img 
-                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
-                        alt="" 
-                        width="40"
-                        class="weekday-icon">
-                   <div class="weekday-degrees">
-                        <span class="forecast-max">77</span> 
-                        <span class="forecast-min">25</span>
-                    </div>
-                  </div>
-              </div>
-            </div>
-            <div class="col-2 weekday-cards">
-              <div class="card weekday-cards">
-                  <div class="weekday-card-body">
-                    <p class="weekday-text">Thur</p>
-                    <img 
-                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
-                        alt="" 
-                        width="40"
-                        class="weekday-icon">
-                   <div class="weekday-degrees">
-                        <span class="forecast-max">77</span> 
-                        <span class="forecast-min">25</span>
-                    </div>
-                  </div>
-              </div>
-            </div>
-            <div class="col-2 weekday-cards">
-              <div class="card weekday-cards">
-                  <div class="weekday-card-body">
-                    <p class="weekday-text">Fri</p>
-                    <img 
-                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
-                        alt="" 
-                        width="40"
-                        class="weekday-icon">
-                   <div class="weekday-degrees">
-                        <span class="forecast-max">77</span> 
-                        <span class="forecast-min">25</span>
-                    </div>  
-                </div>
-              </div>
-            </div>
-            <div class="col-2 weekday-cards">
-              <div class="card weekday-cards">
-                    <div class="weekday-card-body">
-                      <p class="weekday-text">Sat</p>
-                      <img 
-                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
-                        alt="" 
-                        width="40"
-                        class="weekday-icon">
-                   <div class="weekday-degrees">
-                        <span class="forecast-max">77</span> 
-                        <span class="forecast-min">25</span>
-                    </div>
-                </div>
-              </div>
-            </div>
+        <div class="weather-forecast-row" id="forecast-row">
         
-        </div>
-        </div>
+    </div>
         <div class="attribution">
                 <a 
                 class="open-source-code"
                 href="https://github.com/Mandyguti20/Simple-Weather-Application-"
-                target="_blank"<u>Open Source Code</u></a> - Coded by Mandy Gutierrez
+                target="_blank">Open Source Code</a> - Coded by Mandy Gutierrez
         </div> 
+    </div>  
    <script 
    src="src/script.js">
   </script> 
